<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">WatchCheck</string>
    <string name="rss_url">http://17jewels.info/news.xml</string>
    <string name="rss_url_alternative">http://17jewels.info/news_extended.xml</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="selected_watch">Selected watch</string>

    <string name="headlineEditWatch">Edit watch</string>
    <string name="label_model">Model:</string>
    <string name="label_serial">Serial:</string>
    <string name="label_remarks">Remarks:</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="delete_this_watch">Delete this watch</string>
    <string name="addWatchHeadline">Add watch</string>
    <string name="createdWatch">Created watch: %s</string>
    <string name="deleteWatchQuestion">Do you want to delete the watch %s and all of its logs?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deletedWatch">Deleted watch %s</string>
    <string name="deletedLog">Deleted log from %s</string>
    <string name="add_log">Add log</string>
    <string name="measure">Measure (seconds to :00)</string>
    <string name="gps_time">GPS Time: %s</string>
    <string name="ntp_time">NTP Time: %s</string>
    <string name="last_deviation">Last deviation: %+.1f sec.</string>
    <string name="current_deviation">Current deviation: %+.1f sec.</string>
    <string name="no_current_deviation">Current deviation: -</string>
    <string name="deviation">Deviation:</string>
    <string name="deviation_format">%+.1f sec.</string>
    <string name="deviation_per_day_format">%+.1f s/d</string>
    <string name="newPeriod">New period:</string>
    <string name="position">Position:</string>
    <string name="temperature">Temperature:</string>
    <string name="comment">Comment:</string>
    <string name="save">Save</string>
    <string name="deleteLogQuestion">Do you really want to delete the selected log entry of %s?</string>
    <string name="deletedLogEntry">Successfully deleted log entry of %s</string>
    <string name="button_update">update</string>
    <string name="reference">Reference</string>
    <string name="watch">Watch</string>
    <string name="rate">Rate</string>
    <string name="list_header_reference">Reference</string>
    <string name="list_header_deviation">Deviation</string>
    <string name="list_header_rate">Rate</string>
    <string name="list_header_position">Pos.</string>
    <string name="list_header_temperature">Temp.</string>
    <string name="menu_about">About</string>
    <string name="app_about">(C) 2011–2016 by Christoph Lorenz,\n<a href="http://17jewels.info/">17jewels.info</a>.\n\nAll rights reserved, no warranty at all!\nUse at your own risk!</string>
    <string name="menu_export">Export data</string>
    <string name="dataExported">Data exported</string>
    <string name="list_average_deviation">Average rate: %+.1f s/d</string>
    <string name="list_no_average_deviation">No average rate yet</string>
    <string name="menu_import">Import data</string>
    <string name="dataImported">Data imported</string>
    <string name="menu_whatsnew">What\'s new?</string>
    <string name="worn">worn</string>
    <string name="winder">on the winder</string>
    <string name="other">misc / unspeficied</string>
    <string name="horizontal_dial_up">horizontal, dial up</string>
    <string name="dial_up">dial up</string>
    <string name="horizontal_dial_down">horizontal, dial down</string>
    <string name="dial_down">dial down</string>
    <string name="pos_12o">12 up</string>
    <string name="vertical_12o">vertical, 12 up</string>
    <string name="pos_3o">3 up</string>
    <string name="vertical_3o">vertical, 3 up</string>
    <string name="pos_6o">6 up</string>
    <string name="vertical_6o">vertical, 6 up</string>
    <string name="pos_9o">9 up</string>
    <string name="vertical_9o">vertical, 9 up</string>
    <string name="menu_help">Help</string>
    <string name="url_help">http://17jewels.info/44-workbench/software/268-watchcheck2-en.html</string>
    <string name="whatsnew">What\'s New</string>
    <string name="changelog">
        <![CDATA[
            <b>Version 2.4.0</b>
            <p>
            - Fixed occasionally crashes on startup
            - Fixed articles on 17jewels.info
            - Moved german website from uhrenbastler.de to uhrwerksarchiv.de
            - Translation fix
            - New positions: Watch winder, unspecified/misc
            - Fixed time format for non german-speaking countries
            <p>
            <b>Version 2.3.3</b>
            <p>
            - Fixed Nullpointer crash when no watch was selected
            <p>
            <b>Version 2.3.2</b>
            <p>
            - Fixed crash on landscape tablet startup<br/>
            - Cleaned up menu bar on tablets<br/>
            - ActionBar fixes<br/>
            - Fixed bug, where wrong watch could be tracked<br/>
            - (Hopefully) fixed bug with inactive "new period" checkbox
        ]]>
    </string>
    <string name="ok">OK</string>
    <string name="check_your_watch">Check your watch</string>
    <string name="measure_watch">Measure your watch</string>
    <string name="select_watch">Select your watch</string>
    <string name="add_watch">add watch</string>
    <string name="new_watch">New watch</string>
    <string name="edit_watch">Edit watch</string>
    <string name="delete_this_log">Delete log</string>
    <string name="edit_log">Edit log</string>
    <string name="delete">delete</string>
    <string name="cancelLowercase">cancel</string>
    <string name="no_results_yet">No results yet</string>
    <string name="updatedWatch">Updated watch: %s</string>
    <string name="no_last_deviation">Last deviation: -</string>
    <string name="check_watch_guide">Time of your watch (seconds to :00)</string>
    <string name="summary">Summary</string>
    <string name="results">results</string>
    <string name="labelSummaryDialUp">dial up</string>
    <string name="summary_overall">average rate</string>
    <string name="empty_value">-</string>
    <string name="summary_worn">worn</string>
    <string name="summary_winder">on the winder</string>
    <string name="summary_other">misc / unspecified</string>
    <string name="new_rss">New on 17jewels.info</string>
    <string name="pref_check_rss">Display new articles</string>
    <string name="pref_check_rss_summ">Check at max. once a day, and only on WLAN, for new artices on 17jewels.info and display them</string>
    <string name="settings">Settings</string>
    <string name="news">News</string>
    <string name="rss_date_format">yyyy-MM-dd</string>
    <string name="new_rss_activity">Articles on 17jewels.info</string>
    <string name="preference_reminder">Reminder</string>
    <string name="pref_check_reminder">Reminder enabled</string>
    <string name="pref_check_reminder_summ">Reminds daily at the same time to check your watch</string>
    <string name="pref_time_reminder">Reminder time</string>
    <string name="pref_time_reminder_summ">Reminds daily at that time to check your watch</string>
    <string name="reminder_time_unset">unset</string>
    <string name="notification_text">Check your watch now!</string>
    <string name="cancel_reminder">Cancelled reminder</string>
    <string name="set_reminder">Daily reminder at %s set</string>
    <string name="reminder_set">Set reminder</string>
    <string name="reminder_set_text_initial"><![CDATA[You will be reminded daily at %s to check your watch.<br/>If you want to, you can disable the reminder in the settings.]]></string>
    <string name="reminder_set_text"><![CDATA[You will be reminded daily at %s to check your watch.<br/>]]></string>
    <string name="reminder_unset">Cancelled reminder</string>
    <string name="reminder_unset_text">Cancelled your daily check-your-watch reminder.</string>
    <string name="time_format">hh:mm:ss aa</string>
    <string name="result_time_day_format">dd.MM.yyyy\nhh:mm:ss aa</string>
</resources>
