<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/news"
        android:key="pref_key_storage_news">
        <CheckBoxPreference
            android:widgetLayout="@layout/material_switch"
            android:key="pref_rss"
            android:title="@string/pref_check_rss"
            android:summary="@string/pref_check_rss_summ"
            android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preference_reminder">
        <de.uhrenbastler.watchcheck.preferences.ReminderCheckboxPreference
            android:widgetLayout="@layout/material_switch"
            android:key="pref_reminder"
            android:title="@string/pref_check_reminder"
            android:summary="@string/pref_check_reminder_summ"
            android:defaultValue="true"/>
        <de.uhrenbastler.watchcheck.preferences.TimepickerPreference
            android:key="pref_reminder_time"
            android:title="@string/pref_time_reminder"
            android:summary="@string/pref_time_reminder_summ"
            android:dependency="pref_reminder"
            android:timePickerMode="clock"
            android:shouldDisableView="true"/>
    </PreferenceCategory>
</PreferenceScreen>
