<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_material_light"
    android:orientation="vertical">

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/tableLayoutDisplaySummary"
        android:stretchColumns="1"
        android:layout_marginTop="20dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/textColorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/labelSummaryDialUp"
                android:layout_weight="0.60"
                android:layout_width="0dp"
                android:gravity="left"
                android:text="@string/horizontal_dial_up"/>
            <TextView
                android:textColor="@color/textColorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/summaryDialUp"
                android:layout_weight="0.40"
                android:layout_width="0dp"
                android:gravity="center_horizontal"
                android:text="@string/deviation_format"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/textColorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/labelSummaryDialDown"
                android:layout_weight="0.60"
                android:layout_width="0dp"
                android:gravity="left"
                android:text="@string/horizontal_dial_down"/>
            <TextView
                android:textColor="@color/textColorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/summaryDialDown"
                android:layout_weight="0.40"
                android:layout_width="0dp"
                android:gravity="center_horizontal"
                android:text="@string/deviation_format"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp">
            <TextView
                android:textColor="@color/textColorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/labelSummary12o"
                android:layout_weight="0.60"
                android:layout_width="0dp"
                android:gravity="left"
                android:text="@string/vertical_12o"/>
            <TextView
                android:textColor="@color/textColorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/summary12o"
                android:layout_weight="0.40"
                android:layout_width="0dp"
                android:gravity="center_horizontal"
                android:text="@string/deviation_format"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/textColorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/labelSummary3o"
                android:layout_weight="0.60"
                android:layout_width="0dp"
                android:gravity="left"
                android:text="@string/vertical_3o"/>
            <TextView
                android:textColor="@color/textColorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/summary3o"
                android:layout_weight="0.40"
                android:layout_width="0dp"
                android:gravity="center_horizontal"
                android:text="@string/deviation_format"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/textColorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/labelSummary6o"
                android:layout_weight="0.60"
                android:layout_width="0dp"
                android:gravity="left"
                android:text="@string/vertical_6o"/>
            <TextView
                android:textColor="@color/textColorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/summary6o"
                android:layout_weight="0.40"
                android:layout_width="0dp"
                android:gravity="center_horizontal"
                android:text="@string/deviation_format"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow6" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/textColorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/labelSummary9o"
                android:layout_weight="0.60"
                android:layout_width="0dp"
                android:gravity="left"
                android:text="@string/vertical_9o"/>
            <TextView
                android:textColor="@color/textColorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/summary9o"
                android:layout_weight="0.40"
                android:layout_width="0dp"
                android:gravity="center_horizontal"
                android:text="@string/deviation_format"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp">
            <TextView
                android:textColor="@color/textColorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/labelSummaryOverall"
                android:layout_weight="0.60"
                android:layout_width="0dp"
                android:gravity="left"
                android:text="@string/summary_overall"/>
            <TextView
                android:textColor="@color/textColorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/summary_overall"
                android:layout_weight="0.40"
                android:layout_width="0dp"
                android:gravity="center_horizontal"
                android:text="@string/deviation_format"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>